--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Inicio - Mi Sitio</title>
+  <title>Contacto - Mi Sitio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Bienvenido a Mi Sitio</h1>
+    <h1>Contáctanos</h1>
   </header>
 
   <nav>
@@ -17,8 +17,8 @@
   </nav>
 
   <main>
-    <h2>Página de inicio</h2>
-    <p>Este es un ejemplo de sitio con estilos aplicados desde un archivo CSS externo.</p>
+    <h2>Formulario de contacto</h2>
+    <p>Puedes ponerte en contacto con nosotros mediante este sitio web.</p>
   </main>
 
   <footer>
