--- a/about.html
+++ b/about.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Acerca de - Mi Sitio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Sobre mí</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Acerca de Nosotros</h1>
-  </header>
-
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
-  </nav>
-
-  <main>
-    <h2>Sobre este proyecto</h2>
-    <p>Esta página explica el propósito del sitio y su estructura.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Mi Sitio Web</p>
-  </footer>
+    <header>
+        <h1>Sobre mí</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Sobre mí</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <p>Esta es la página sobre mí.</p>
+    </main>
+    <footer>
+        <p>© 2025 Mi Sitio Web</p>
+    </footer>
 </body>
 </html>
