--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Contacto - Mi Sitio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Contáctanos</h1>
-  </header>
-
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
-  </nav>
-
-  <main>
-    <h2>Formulario de contacto</h2>
-    <p>Puedes ponerte en contacto con nosotros mediante este sitio web.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Mi Sitio Web</p>
-  </footer>
+    <header>
+        <h1>Contacto</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Sobre mí</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <p>Puedes escribirme a: ejemplo@correo.com</p>
+    </main>
+    <footer>
+        <p>© 2025 Mi Sitio Web</p>
+    </footer>
 </body>
 </html>
