--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Inicio - Mi Sitio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Página Principal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Bienvenido a Mi Sitio</h1>
-  </header>
-
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
-  </nav>
-
-  <main>
-    <h2>Página de inicio</h2>
-    <p>Este es un ejemplo de sitio con estilos aplicados desde un archivo CSS externo.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Mi Sitio Web</p>
-  </footer>
+    <header>
+        <h1>Bienvenido a mi sitio</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Sobre mí</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <p>Este es el contenido de la página principal.</p>
+    </main>
+    <footer>
+        <p>© 2025 Mi Sitio Web</p>
+    </footer>
 </body>
 </html>
