--- a/parks.html
+++ b/parks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de</title>
+    <title>Parques</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,18 +22,20 @@
     </header>
 
     <main id="contenido-principal">
-        <h1>Acerca de</h1>
-        <p>Este sitio fue creado como proyecto para practicar HTML5 y CSS.</p>
+        <h1>Parques</h1>
+        <p>Explora los parques más importantes de la región.</p>
 
-        <section class="flex">
-            <div>
-                <h3>Misión</h3>
-                <p>Promover el conocimiento de los parques locales.</p>
-            </div>
-            <div>
-                <h3>Visión</h3>
-                <p>Ser la guía digital más completa de espacios verdes.</p>
-            </div>
+        <section class="grid">
+            <article>
+                <h2>Parque 1</h2>
+                <img src="imagenes/parque1.jpg" alt="Imagen del parque 1">
+                <p>Descripción del parque 1.</p>
+            </article>
+            <article>
+                <h2>Parque 2</h2>
+                <img src="imagenes/parque2.jpg" alt="Imagen del parque 2">
+                <p>Descripción del parque 2.</p>
+            </article>
         </section>
     </main>
 
