--- a/index.html
+++ b/index.html
@@ -2,25 +2,64 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página Principal</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Sitio Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Enlace para accesibilidad -->
+    <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
+
+    <!-- Encabezado / navegación -->
     <header>
-        <h1>Bienvenido a mi sitio</h1>
+        <nav>
+            <img src="imagenes/logo.png" alt="Logo del sitio">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="parks.html">Parques</a></li>
+                <li><a href="about.html">Acerca de</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Sobre mí</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <main>
-        <p>Este es el contenido de la página principal.</p>
+
+    <!-- Contenido principal con ID para skip-link -->
+    <main id="contenido-principal">
+        <h1>Bienvenido</h1>
+        <p>Este es el contenido principal de tu página de inicio.</p>
+
+        <section class="grid">
+            <article>
+                <h2>Sección 1</h2>
+                <img src="imagenes/ejemplo1.jpg" alt="Imagen de ejemplo 1">
+                <p>Descripción de la sección 1.</p>
+            </article>
+            <article>
+                <h2>Sección 2</h2>
+                <img src="imagenes/ejemplo2.jpg" alt="Imagen de ejemplo 2">
+                <p>Descripción de la sección 2.</p>
+            </article>
+        </section>
+
+        <section class="flex">
+            <div>
+                <h3>Bloque 1</h3>
+                <p>Texto dentro del bloque 1.</p>
+            </div>
+            <div>
+                <h3>Bloque 2</h3>
+                <p>Texto dentro del bloque 2.</p>
+            </div>
+            <div>
+                <h3>Bloque 3</h3>
+                <p>Texto dentro del bloque 3.</p>
+            </div>
+        </section>
     </main>
+
     <footer>
         <p>© 2025 Mi Sitio Web</p>
     </footer>
+
 </body>
 </html>
