--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p>Este es el contenido principal de tu página de inicio.</p>
 
         <section class="grid">
+  <h2>Contenido principal</h2>
             <article>
                 <h2>Sección 1</h2>
                 <img src="imagenes/ejemplo1.jpg" alt="Imagen de ejemplo 1">
