--- a/parks.html
+++ b/parks.html
@@ -26,6 +26,7 @@
         <p>Explora los parques más importantes de la región.</p>
 
         <section class="grid">
+  <h2>Contenido principal</h2>
             <article>
                 <h2>Parque 1</h2>
                 <img src="imagenes/parque1.jpg" alt="Imagen del parque 1">
