--- a/about.html
+++ b/about.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Acerca de</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
+  <!-- Enlace para saltar al contenido principal -->
+  <a href="#contenido-principal" class="skip-link">Saltar al contenido principal</a>
 
-    <header>
-        <nav>
-            <img src="imagenes/logo.png" alt="Logo del sitio">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="parks.html">Parques</a></li>
-                <li><a href="about.html">Acerca de</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <img src="images/logo.png" alt="Logo del sitio">
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="parks.html">Parques</a></li>
+        <li><a href="about.html" class="active">Acerca de</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main id="contenido-principal">
-        <h1>Acerca de</h1>
-        <p>Este sitio fue creado como proyecto para practicar HTML5 y CSS.</p>
+  <main id="contenido-principal">
+    <section class="grid">
+      <h2>Sobre Nosotros</h2>
 
-        <section class="flex">
-            <div>
-                <h3>Misión</h3>
-                <p>Promover el conocimiento de los parques locales.</p>
-            </div>
-            <div>
-                <h3>Visión</h3>
-                <p>Ser la guía digital más completa de espacios verdes.</p>
-            </div>
-        </section>
-    </main>
+      <article>
+        <p>Somos un equipo dedicado a promover el acceso a espacios verdes y la vida al aire libre.</p>
+      </article>
 
-    <footer>
-        <p>© 2025 Mi Sitio Web</p>
-    </footer>
+      <article>
+        <p>Nuestro objetivo es crear conciencia sobre la importancia de los parques en las comunidades.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Mi Sitio de Parques</p>
+  </footer>
 
 </body>
 </html>
